// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Nav/Projects Dropdown List With only invitations 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <a
      aria-current={null}
      className="Dropdown__DropdownLink-fhxyb7-4 VIDVC"
      href="/projects"
      onClick={[Function]}
    >
      <div
        className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
      >
        <div
          className="ProjectDropdown__DropdownIcon-nj113c-1 laumky"
        >
          <svg
            height={26}
            viewBox="0 0 24 26"
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="#1A9BC7"
            >
              <path
                d="M8 2.25h12c.966 0 1.75.784 1.75 1.75v14A1.75 1.75 0 0120 19.75H8A1.75 1.75 0 016.25 18V4c0-.966.784-1.75 1.75-1.75z"
                fill="#FFF"
                strokeWidth={1.5}
              />
              <g
                transform="translate(3 7)"
              >
                <rect
                  fill="#FFF"
                  height={17.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={15.5}
                  x={-0.75}
                  y={-0.75}
                />
                <path
                  d="M2.987 2.333a.357.357 0 000 .715h5.286a.357.357 0 000-.715H2.987zm.003 4.834a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99zm0 4.5a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99z"
                />
              </g>
            </g>
          </svg>
        </div>
        View All Projects
      </div>
    </a>
    <div
      className="Dropdown__DropdownSeparator-fhxyb7-6 lhmoku"
    />
    <div
      className="Dropdown__DropdownElement-fhxyb7-5 lhCwmi"
    >
      <div
        className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
      >
        <div
          className="ProjectDropdown__DropdownWithNotificationIcon-nj113c-2 bbrqMJ"
        >
          <svg
            color="#0d79d0"
            height={26}
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                stroke="#7FB5D5"
                transform="translate(3 9)"
              >
                <rect
                  fill="#FFF"
                  height={15.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={13.5}
                  x={-0.75}
                  y={-0.75}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={4}
                  x={2.5}
                  y={2.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={6.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={10.5}
                />
              </g>
              <circle
                cx={17}
                cy={7}
                fill="#FFF"
                fillRule="nonzero"
                r={7}
              />
              <g
                fillRule="nonzero"
                transform="translate(11 1)"
              >
                <circle
                  cx={6}
                  cy={6}
                  fill="#80BE86"
                  r={6}
                />
                <circle
                  cx={6}
                  cy={9}
                  fill="#FFF"
                  r={1}
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
                <path
                  className="user-icon-path"
                  d="M5.875 2.5c.207 0 .375.168.375.375v3.25a.375.375 0 1 1-.75 0v-3.25c0-.207.168-.375.375-.375z"
                  fill="#FFF"
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          className="ProjectDropdown__ButtonsContainer-nj113c-3 htJNip"
        >
          <div />
          <div
            className="Dropdown__InvitedBy-fhxyb7-3 aoFFf"
          >
            <div
              className="ProjectDropdown__InvitedByText-nj113c-8 dvMrAN"
            >
              Invited by
            </div>
            <div
              className="ProjectDropdown__AvatarContainer-nj113c-7 LCfCU"
            >
              <div
                className="sc-jffIyK kbBVcu"
              >
                <svg
                  className="sc-oefIU hhjELT"
                  color="#0d79d0"
                  height={20}
                  viewBox="0 0 34 34"
                  width={20}
                >
                  <path
                    d="M17 1c8.837 0 16 7.163 16 16s-7.163 16-16 16S1 25.837 1 17 8.163 1 17 1zm0 17.585a9.341 9.341 0 00-9.324 9.905A14.737 14.737 0 0017 31.797a14.74 14.74 0 009.324-3.306A9.341 9.341 0 0017 18.586zm0-16.382C8.828 2.203 2.203 8.828 2.203 17c0 4.03 1.612 7.685 4.226 10.354.243-4.575 3.391-8.378 7.633-9.601a5.605 5.605 0 115.876.001c4.242 1.222 7.39 5.025 7.633 9.6A14.75 14.75 0 0031.797 17c0-8.172-6.625-14.797-14.797-14.797zm0 6.418a4.36 4.36 0 100 8.719 4.36 4.36 0 000-8.719z"
                    fill="#6E6E6E"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ProjectDropdown__ButtonsContainer-nj113c-3 htJNip"
      >
        <button
          className="sc-ezzayL sc-kLokih ProjectDropdown__AcceptButton-nj113c-5 cRSqLN bYa-DYT keNSdg"
          onClick={[Function]}
          type="button"
        >
          Accept
        </button>
        <button
          className="sc-ezzayL sc-bYwzba ProjectDropdown__RejectButton-nj113c-6 cRSqLN bXiklN bQYwVJ"
          onClick={[Function]}
          type="button"
        >
          Reject
        </button>
      </div>
    </div>
    <div
      className="Dropdown__DropdownElement-fhxyb7-5 lhCwmi"
    >
      <div
        className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
      >
        <div
          className="ProjectDropdown__DropdownWithNotificationIcon-nj113c-2 bbrqMJ"
        >
          <svg
            color="#0d79d0"
            height={26}
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                stroke="#7FB5D5"
                transform="translate(3 9)"
              >
                <rect
                  fill="#FFF"
                  height={15.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={13.5}
                  x={-0.75}
                  y={-0.75}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={4}
                  x={2.5}
                  y={2.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={6.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={10.5}
                />
              </g>
              <circle
                cx={17}
                cy={7}
                fill="#FFF"
                fillRule="nonzero"
                r={7}
              />
              <g
                fillRule="nonzero"
                transform="translate(11 1)"
              >
                <circle
                  cx={6}
                  cy={6}
                  fill="#80BE86"
                  r={6}
                />
                <circle
                  cx={6}
                  cy={9}
                  fill="#FFF"
                  r={1}
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
                <path
                  className="user-icon-path"
                  d="M5.875 2.5c.207 0 .375.168.375.375v3.25a.375.375 0 1 1-.75 0v-3.25c0-.207.168-.375.375-.375z"
                  fill="#FFF"
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          className="ProjectDropdown__ButtonsContainer-nj113c-3 htJNip"
        >
          <div />
          <div
            className="Dropdown__InvitedBy-fhxyb7-3 aoFFf"
          >
            <div
              className="ProjectDropdown__InvitedByText-nj113c-8 dvMrAN"
            >
              Invited by
            </div>
            <div
              className="ProjectDropdown__AvatarContainer-nj113c-7 LCfCU"
            >
              <div
                className="sc-jffIyK kbBVcu"
              >
                <svg
                  className="sc-oefIU hhjELT"
                  color="#0d79d0"
                  height={20}
                  viewBox="0 0 34 34"
                  width={20}
                >
                  <path
                    d="M17 1c8.837 0 16 7.163 16 16s-7.163 16-16 16S1 25.837 1 17 8.163 1 17 1zm0 17.585a9.341 9.341 0 00-9.324 9.905A14.737 14.737 0 0017 31.797a14.74 14.74 0 009.324-3.306A9.341 9.341 0 0017 18.586zm0-16.382C8.828 2.203 2.203 8.828 2.203 17c0 4.03 1.612 7.685 4.226 10.354.243-4.575 3.391-8.378 7.633-9.601a5.605 5.605 0 115.876.001c4.242 1.222 7.39 5.025 7.633 9.6A14.75 14.75 0 0031.797 17c0-8.172-6.625-14.797-14.797-14.797zm0 6.418a4.36 4.36 0 100 8.719 4.36 4.36 0 000-8.719z"
                    fill="#6E6E6E"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ProjectDropdown__ButtonsContainer-nj113c-3 htJNip"
      >
        <button
          className="sc-ezzayL sc-kLokih ProjectDropdown__AcceptButton-nj113c-5 cRSqLN bYa-DYT keNSdg"
          onClick={[Function]}
          type="button"
        >
          Accept
        </button>
        <button
          className="sc-ezzayL sc-bYwzba ProjectDropdown__RejectButton-nj113c-6 cRSqLN bXiklN bQYwVJ"
          onClick={[Function]}
          type="button"
        >
          Reject
        </button>
      </div>
    </div>
    <div
      className="ProjectsDropdownList__ProjectContainer-iy7kf9-0 iKAHVI"
    />
    <div
      className="ProjectDropdown__ActionContainer-nj113c-0 iliCiP"
    >
      <button
        className="sc-ezzayL sc-jJMGHv AddButton__Action-sc-16tykoq-1 cRSqLN qAimf gETdIg"
        onClick={[Function]}
        size="default"
        type="button"
      >
        <svg
          className="AddButton__RegularAddIcon-sc-16tykoq-0"
          height={40}
          viewBox="0 0 32 34"
          width={40}
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
              fill="#FFBD26"
            />
            <path
              d="M16.005 8.957a.75.75 0 01.75.75l-.001 6h6.001a.75.75 0 010 1.5h-6.001l.001 6a.75.75 0 01-1.5 0l-.001-6H9.255a.75.75 0 110-1.5h5.999l.001-6a.75.75 0 01.75-.75z"
              fill="#FFF"
              stroke="#FFF"
            />
          </g>
        </svg>
        <div
          className="AddButton__ActionTitle-sc-16tykoq-2 eGkEGv"
        >
          New Project
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Nav/Projects Dropdown List With projects 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <a
      aria-current={null}
      className="Dropdown__DropdownLink-fhxyb7-4 VIDVC"
      href="/projects"
      onClick={[Function]}
    >
      <div
        className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
      >
        <div
          className="ProjectDropdown__DropdownIcon-nj113c-1 laumky"
        >
          <svg
            height={26}
            viewBox="0 0 24 26"
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="#1A9BC7"
            >
              <path
                d="M8 2.25h12c.966 0 1.75.784 1.75 1.75v14A1.75 1.75 0 0120 19.75H8A1.75 1.75 0 016.25 18V4c0-.966.784-1.75 1.75-1.75z"
                fill="#FFF"
                strokeWidth={1.5}
              />
              <g
                transform="translate(3 7)"
              >
                <rect
                  fill="#FFF"
                  height={17.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={15.5}
                  x={-0.75}
                  y={-0.75}
                />
                <path
                  d="M2.987 2.333a.357.357 0 000 .715h5.286a.357.357 0 000-.715H2.987zm.003 4.834a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99zm0 4.5a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99z"
                />
              </g>
            </g>
          </svg>
        </div>
        View All Projects
      </div>
    </a>
    <div
      className="Dropdown__DropdownSeparator-fhxyb7-6 lhmoku"
    />
    <div
      className="ProjectsDropdownList__ProjectContainer-iy7kf9-0 iKAHVI"
    >
      <a
        aria-current={null}
        className="Dropdown__DropdownLink-fhxyb7-4 VIDVC"
        href="/projects/project-3"
        onClick={[Function]}
      >
        <div
          className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
        >
          <div
            className="ProjectDropdown__DropdownIcon-nj113c-1 laumky"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div
            className="Dropdown__PlaceholderTitle-fhxyb7-2 fAXUxr"
          />
        </div>
      </a>
      <a
        aria-current={null}
        className="Dropdown__DropdownLink-fhxyb7-4 VIDVC"
        href="/projects/project-1"
        onClick={[Function]}
      >
        <div
          className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
        >
          <div
            className="ProjectDropdown__DropdownIcon-nj113c-1 laumky"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div />
        </div>
      </a>
      <a
        aria-current={null}
        className="Dropdown__DropdownLink-fhxyb7-4 VIDVC"
        href="/projects/project-2"
        onClick={[Function]}
      >
        <div
          className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
        >
          <div
            className="ProjectDropdown__DropdownIcon-nj113c-1 laumky"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div />
        </div>
      </a>
    </div>
    <div
      className="Dropdown__DropdownSeparator-fhxyb7-6 lhmoku"
    />
    <div
      className="ProjectDropdown__ActionContainer-nj113c-0 iliCiP"
    >
      <button
        className="sc-ezzayL sc-jJMGHv AddButton__Action-sc-16tykoq-1 cRSqLN qAimf gETdIg"
        onClick={[Function]}
        size="default"
        type="button"
      >
        <svg
          className="AddButton__RegularAddIcon-sc-16tykoq-0"
          height={40}
          viewBox="0 0 32 34"
          width={40}
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
              fill="#FFBD26"
            />
            <path
              d="M16.005 8.957a.75.75 0 01.75.75l-.001 6h6.001a.75.75 0 010 1.5h-6.001l.001 6a.75.75 0 01-1.5 0l-.001-6H9.255a.75.75 0 110-1.5h5.999l.001-6a.75.75 0 01.75-.75z"
              fill="#FFF"
              stroke="#FFF"
            />
          </g>
        </svg>
        <div
          className="AddButton__ActionTitle-sc-16tykoq-2 eGkEGv"
        >
          New Project
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Nav/Projects Dropdown List With projects and invitations 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <a
      aria-current={null}
      className="Dropdown__DropdownLink-fhxyb7-4 VIDVC"
      href="/projects"
      onClick={[Function]}
    >
      <div
        className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
      >
        <div
          className="ProjectDropdown__DropdownIcon-nj113c-1 laumky"
        >
          <svg
            height={26}
            viewBox="0 0 24 26"
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="#1A9BC7"
            >
              <path
                d="M8 2.25h12c.966 0 1.75.784 1.75 1.75v14A1.75 1.75 0 0120 19.75H8A1.75 1.75 0 016.25 18V4c0-.966.784-1.75 1.75-1.75z"
                fill="#FFF"
                strokeWidth={1.5}
              />
              <g
                transform="translate(3 7)"
              >
                <rect
                  fill="#FFF"
                  height={17.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={15.5}
                  x={-0.75}
                  y={-0.75}
                />
                <path
                  d="M2.987 2.333a.357.357 0 000 .715h5.286a.357.357 0 000-.715H2.987zm.003 4.834a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99zm0 4.5a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99z"
                />
              </g>
            </g>
          </svg>
        </div>
        View All Projects
      </div>
    </a>
    <div
      className="Dropdown__DropdownSeparator-fhxyb7-6 lhmoku"
    />
    <div
      className="Dropdown__DropdownElement-fhxyb7-5 lhCwmi"
    >
      <div
        className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
      >
        <div
          className="ProjectDropdown__DropdownWithNotificationIcon-nj113c-2 bbrqMJ"
        >
          <svg
            color="#0d79d0"
            height={26}
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                stroke="#7FB5D5"
                transform="translate(3 9)"
              >
                <rect
                  fill="#FFF"
                  height={15.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={13.5}
                  x={-0.75}
                  y={-0.75}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={4}
                  x={2.5}
                  y={2.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={6.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={10.5}
                />
              </g>
              <circle
                cx={17}
                cy={7}
                fill="#FFF"
                fillRule="nonzero"
                r={7}
              />
              <g
                fillRule="nonzero"
                transform="translate(11 1)"
              >
                <circle
                  cx={6}
                  cy={6}
                  fill="#80BE86"
                  r={6}
                />
                <circle
                  cx={6}
                  cy={9}
                  fill="#FFF"
                  r={1}
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
                <path
                  className="user-icon-path"
                  d="M5.875 2.5c.207 0 .375.168.375.375v3.25a.375.375 0 1 1-.75 0v-3.25c0-.207.168-.375.375-.375z"
                  fill="#FFF"
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          className="ProjectDropdown__ButtonsContainer-nj113c-3 htJNip"
        >
          <div />
          <div
            className="Dropdown__InvitedBy-fhxyb7-3 aoFFf"
          >
            <div
              className="ProjectDropdown__InvitedByText-nj113c-8 dvMrAN"
            >
              Invited by
            </div>
            <div
              className="ProjectDropdown__AvatarContainer-nj113c-7 LCfCU"
            >
              <div
                className="sc-jffIyK kbBVcu"
              >
                <svg
                  className="sc-oefIU hhjELT"
                  color="#0d79d0"
                  height={20}
                  viewBox="0 0 34 34"
                  width={20}
                >
                  <path
                    d="M17 1c8.837 0 16 7.163 16 16s-7.163 16-16 16S1 25.837 1 17 8.163 1 17 1zm0 17.585a9.341 9.341 0 00-9.324 9.905A14.737 14.737 0 0017 31.797a14.74 14.74 0 009.324-3.306A9.341 9.341 0 0017 18.586zm0-16.382C8.828 2.203 2.203 8.828 2.203 17c0 4.03 1.612 7.685 4.226 10.354.243-4.575 3.391-8.378 7.633-9.601a5.605 5.605 0 115.876.001c4.242 1.222 7.39 5.025 7.633 9.6A14.75 14.75 0 0031.797 17c0-8.172-6.625-14.797-14.797-14.797zm0 6.418a4.36 4.36 0 100 8.719 4.36 4.36 0 000-8.719z"
                    fill="#6E6E6E"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ProjectDropdown__ButtonsContainer-nj113c-3 htJNip"
      >
        <button
          className="sc-ezzayL sc-kLokih ProjectDropdown__AcceptButton-nj113c-5 cRSqLN bYa-DYT keNSdg"
          onClick={[Function]}
          type="button"
        >
          Accept
        </button>
        <button
          className="sc-ezzayL sc-bYwzba ProjectDropdown__RejectButton-nj113c-6 cRSqLN bXiklN bQYwVJ"
          onClick={[Function]}
          type="button"
        >
          Reject
        </button>
      </div>
    </div>
    <div
      className="Dropdown__DropdownElement-fhxyb7-5 lhCwmi"
    >
      <div
        className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
      >
        <div
          className="ProjectDropdown__DropdownWithNotificationIcon-nj113c-2 bbrqMJ"
        >
          <svg
            color="#0d79d0"
            height={26}
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                stroke="#7FB5D5"
                transform="translate(3 9)"
              >
                <rect
                  fill="#FFF"
                  height={15.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={13.5}
                  x={-0.75}
                  y={-0.75}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={4}
                  x={2.5}
                  y={2.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={6.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={10.5}
                />
              </g>
              <circle
                cx={17}
                cy={7}
                fill="#FFF"
                fillRule="nonzero"
                r={7}
              />
              <g
                fillRule="nonzero"
                transform="translate(11 1)"
              >
                <circle
                  cx={6}
                  cy={6}
                  fill="#80BE86"
                  r={6}
                />
                <circle
                  cx={6}
                  cy={9}
                  fill="#FFF"
                  r={1}
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
                <path
                  className="user-icon-path"
                  d="M5.875 2.5c.207 0 .375.168.375.375v3.25a.375.375 0 1 1-.75 0v-3.25c0-.207.168-.375.375-.375z"
                  fill="#FFF"
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          className="ProjectDropdown__ButtonsContainer-nj113c-3 htJNip"
        >
          <div />
          <div
            className="Dropdown__InvitedBy-fhxyb7-3 aoFFf"
          >
            <div
              className="ProjectDropdown__InvitedByText-nj113c-8 dvMrAN"
            >
              Invited by
            </div>
            <div
              className="ProjectDropdown__AvatarContainer-nj113c-7 LCfCU"
            >
              <div
                className="sc-jffIyK kbBVcu"
              >
                <svg
                  className="sc-oefIU hhjELT"
                  color="#0d79d0"
                  height={20}
                  viewBox="0 0 34 34"
                  width={20}
                >
                  <path
                    d="M17 1c8.837 0 16 7.163 16 16s-7.163 16-16 16S1 25.837 1 17 8.163 1 17 1zm0 17.585a9.341 9.341 0 00-9.324 9.905A14.737 14.737 0 0017 31.797a14.74 14.74 0 009.324-3.306A9.341 9.341 0 0017 18.586zm0-16.382C8.828 2.203 2.203 8.828 2.203 17c0 4.03 1.612 7.685 4.226 10.354.243-4.575 3.391-8.378 7.633-9.601a5.605 5.605 0 115.876.001c4.242 1.222 7.39 5.025 7.633 9.6A14.75 14.75 0 0031.797 17c0-8.172-6.625-14.797-14.797-14.797zm0 6.418a4.36 4.36 0 100 8.719 4.36 4.36 0 000-8.719z"
                    fill="#6E6E6E"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ProjectDropdown__ButtonsContainer-nj113c-3 htJNip"
      >
        <button
          className="sc-ezzayL sc-kLokih ProjectDropdown__AcceptButton-nj113c-5 cRSqLN bYa-DYT keNSdg"
          onClick={[Function]}
          type="button"
        >
          Accept
        </button>
        <button
          className="sc-ezzayL sc-bYwzba ProjectDropdown__RejectButton-nj113c-6 cRSqLN bXiklN bQYwVJ"
          onClick={[Function]}
          type="button"
        >
          Reject
        </button>
      </div>
    </div>
    <div
      className="ProjectsDropdownList__ProjectContainer-iy7kf9-0 iKAHVI"
    >
      <a
        aria-current={null}
        className="Dropdown__DropdownLink-fhxyb7-4 VIDVC"
        href="/projects/project-3"
        onClick={[Function]}
      >
        <div
          className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
        >
          <div
            className="ProjectDropdown__DropdownIcon-nj113c-1 laumky"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div
            className="Dropdown__PlaceholderTitle-fhxyb7-2 fAXUxr"
          />
        </div>
      </a>
      <a
        aria-current={null}
        className="Dropdown__DropdownLink-fhxyb7-4 VIDVC"
        href="/projects/project-1"
        onClick={[Function]}
      >
        <div
          className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
        >
          <div
            className="ProjectDropdown__DropdownIcon-nj113c-1 laumky"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div />
        </div>
      </a>
      <a
        aria-current={null}
        className="Dropdown__DropdownLink-fhxyb7-4 VIDVC"
        href="/projects/project-2"
        onClick={[Function]}
      >
        <div
          className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
        >
          <div
            className="ProjectDropdown__DropdownIcon-nj113c-1 laumky"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div />
        </div>
      </a>
    </div>
    <div
      className="Dropdown__DropdownSeparator-fhxyb7-6 lhmoku"
    />
    <div
      className="ProjectDropdown__ActionContainer-nj113c-0 iliCiP"
    >
      <button
        className="sc-ezzayL sc-jJMGHv AddButton__Action-sc-16tykoq-1 cRSqLN qAimf gETdIg"
        onClick={[Function]}
        size="default"
        type="button"
      >
        <svg
          className="AddButton__RegularAddIcon-sc-16tykoq-0"
          height={40}
          viewBox="0 0 32 34"
          width={40}
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
              fill="#FFBD26"
            />
            <path
              d="M16.005 8.957a.75.75 0 01.75.75l-.001 6h6.001a.75.75 0 010 1.5h-6.001l.001 6a.75.75 0 01-1.5 0l-.001-6H9.255a.75.75 0 110-1.5h5.999l.001-6a.75.75 0 01.75-.75z"
              fill="#FFF"
              stroke="#FFF"
            />
          </g>
        </svg>
        <div
          className="AddButton__ActionTitle-sc-16tykoq-2 eGkEGv"
        >
          New Project
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Nav/Projects Dropdown List With rejected invitations 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <a
      aria-current={null}
      className="Dropdown__DropdownLink-fhxyb7-4 VIDVC"
      href="/projects"
      onClick={[Function]}
    >
      <div
        className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
      >
        <div
          className="ProjectDropdown__DropdownIcon-nj113c-1 laumky"
        >
          <svg
            height={26}
            viewBox="0 0 24 26"
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="#1A9BC7"
            >
              <path
                d="M8 2.25h12c.966 0 1.75.784 1.75 1.75v14A1.75 1.75 0 0120 19.75H8A1.75 1.75 0 016.25 18V4c0-.966.784-1.75 1.75-1.75z"
                fill="#FFF"
                strokeWidth={1.5}
              />
              <g
                transform="translate(3 7)"
              >
                <rect
                  fill="#FFF"
                  height={17.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={15.5}
                  x={-0.75}
                  y={-0.75}
                />
                <path
                  d="M2.987 2.333a.357.357 0 000 .715h5.286a.357.357 0 000-.715H2.987zm.003 4.834a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99zm0 4.5a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99z"
                />
              </g>
            </g>
          </svg>
        </div>
        View All Projects
      </div>
    </a>
    <div
      className="Dropdown__DropdownSeparator-fhxyb7-6 lhmoku"
    />
    <div
      className="Dropdown__DropdownElement-fhxyb7-5 lhCwmi"
    >
      <div
        className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
      >
        <div
          className="ProjectDropdown__DropdownWithNotificationIcon-nj113c-2 bbrqMJ"
        >
          <svg
            color="#0d79d0"
            height={26}
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                stroke="#7FB5D5"
                transform="translate(3 9)"
              >
                <rect
                  fill="#FFF"
                  height={15.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={13.5}
                  x={-0.75}
                  y={-0.75}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={4}
                  x={2.5}
                  y={2.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={6.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={10.5}
                />
              </g>
              <circle
                cx={17}
                cy={7}
                fill="#FFF"
                fillRule="nonzero"
                r={7}
              />
              <g
                fillRule="nonzero"
                transform="translate(11 1)"
              >
                <circle
                  cx={6}
                  cy={6}
                  fill="#80BE86"
                  r={6}
                />
                <circle
                  cx={6}
                  cy={9}
                  fill="#FFF"
                  r={1}
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
                <path
                  className="user-icon-path"
                  d="M5.875 2.5c.207 0 .375.168.375.375v3.25a.375.375 0 1 1-.75 0v-3.25c0-.207.168-.375.375-.375z"
                  fill="#FFF"
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          className="ProjectDropdown__ButtonsContainer-nj113c-3 htJNip"
        >
          <div />
          <div
            className="Dropdown__InvitedBy-fhxyb7-3 aoFFf"
          >
            <div
              className="ProjectDropdown__InvitedByText-nj113c-8 dvMrAN"
            >
              Invited by
            </div>
            <div
              className="ProjectDropdown__AvatarContainer-nj113c-7 LCfCU"
            >
              <div
                className="sc-jffIyK kbBVcu"
              >
                <svg
                  className="sc-oefIU hhjELT"
                  color="#0d79d0"
                  height={20}
                  viewBox="0 0 34 34"
                  width={20}
                >
                  <path
                    d="M17 1c8.837 0 16 7.163 16 16s-7.163 16-16 16S1 25.837 1 17 8.163 1 17 1zm0 17.585a9.341 9.341 0 00-9.324 9.905A14.737 14.737 0 0017 31.797a14.74 14.74 0 009.324-3.306A9.341 9.341 0 0017 18.586zm0-16.382C8.828 2.203 2.203 8.828 2.203 17c0 4.03 1.612 7.685 4.226 10.354.243-4.575 3.391-8.378 7.633-9.601a5.605 5.605 0 115.876.001c4.242 1.222 7.39 5.025 7.633 9.6A14.75 14.75 0 0031.797 17c0-8.172-6.625-14.797-14.797-14.797zm0 6.418a4.36 4.36 0 100 8.719 4.36 4.36 0 000-8.719z"
                    fill="#6E6E6E"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ProjectDropdown__ButtonsContainer-nj113c-3 htJNip"
      >
        <button
          className="sc-ezzayL sc-kLokih ProjectDropdown__AcceptButton-nj113c-5 cRSqLN bYa-DYT keNSdg"
          onClick={[Function]}
          type="button"
        >
          Accept
        </button>
        <button
          className="sc-ezzayL sc-bYwzba ProjectDropdown__RejectButton-nj113c-6 cRSqLN bXiklN bQYwVJ"
          onClick={[Function]}
          type="button"
        >
          Reject
        </button>
      </div>
    </div>
    <div
      className="Dropdown__DropdownElement-fhxyb7-5 lhCwmi"
    >
      <div
        className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
      >
        <div
          className="ProjectDropdown__DropdownWithNotificationIcon-nj113c-2 bbrqMJ"
        >
          <svg
            color="#0d79d0"
            height={26}
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                stroke="#7FB5D5"
                transform="translate(3 9)"
              >
                <rect
                  fill="#FFF"
                  height={15.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={13.5}
                  x={-0.75}
                  y={-0.75}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={4}
                  x={2.5}
                  y={2.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={6.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={10.5}
                />
              </g>
              <circle
                cx={17}
                cy={7}
                fill="#FFF"
                fillRule="nonzero"
                r={7}
              />
              <g
                fillRule="nonzero"
                transform="translate(11 1)"
              >
                <circle
                  cx={6}
                  cy={6}
                  fill="#80BE86"
                  r={6}
                />
                <circle
                  cx={6}
                  cy={9}
                  fill="#FFF"
                  r={1}
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
                <path
                  className="user-icon-path"
                  d="M5.875 2.5c.207 0 .375.168.375.375v3.25a.375.375 0 1 1-.75 0v-3.25c0-.207.168-.375.375-.375z"
                  fill="#FFF"
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          className="ProjectDropdown__ButtonsContainer-nj113c-3 htJNip"
        >
          <div />
          <div
            className="Dropdown__InvitedBy-fhxyb7-3 aoFFf"
          >
            <div
              className="ProjectDropdown__InvitedByText-nj113c-8 dvMrAN"
            >
              Invited by
            </div>
            <div
              className="ProjectDropdown__AvatarContainer-nj113c-7 LCfCU"
            >
              <div
                className="sc-jffIyK kbBVcu"
              >
                <svg
                  className="sc-oefIU hhjELT"
                  color="#0d79d0"
                  height={20}
                  viewBox="0 0 34 34"
                  width={20}
                >
                  <path
                    d="M17 1c8.837 0 16 7.163 16 16s-7.163 16-16 16S1 25.837 1 17 8.163 1 17 1zm0 17.585a9.341 9.341 0 00-9.324 9.905A14.737 14.737 0 0017 31.797a14.74 14.74 0 009.324-3.306A9.341 9.341 0 0017 18.586zm0-16.382C8.828 2.203 2.203 8.828 2.203 17c0 4.03 1.612 7.685 4.226 10.354.243-4.575 3.391-8.378 7.633-9.601a5.605 5.605 0 115.876.001c4.242 1.222 7.39 5.025 7.633 9.6A14.75 14.75 0 0031.797 17c0-8.172-6.625-14.797-14.797-14.797zm0 6.418a4.36 4.36 0 100 8.719 4.36 4.36 0 000-8.719z"
                    fill="#6E6E6E"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ProjectDropdown__ButtonsContainer-nj113c-3 htJNip"
      >
        <button
          className="sc-ezzayL sc-kLokih ProjectDropdown__AcceptButton-nj113c-5 cRSqLN bYa-DYT keNSdg"
          onClick={[Function]}
          type="button"
        >
          Accept
        </button>
        <button
          className="sc-ezzayL sc-bYwzba ProjectDropdown__RejectButton-nj113c-6 cRSqLN bXiklN bQYwVJ"
          onClick={[Function]}
          type="button"
        >
          Reject
        </button>
      </div>
    </div>
    <div
      className="ProjectsDropdownList__ProjectContainer-iy7kf9-0 iKAHVI"
    >
      <a
        aria-current={null}
        className="Dropdown__DropdownLink-fhxyb7-4 VIDVC"
        href="/projects/project-3"
        onClick={[Function]}
      >
        <div
          className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
        >
          <div
            className="ProjectDropdown__DropdownIcon-nj113c-1 laumky"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div
            className="Dropdown__PlaceholderTitle-fhxyb7-2 fAXUxr"
          />
        </div>
      </a>
      <a
        aria-current={null}
        className="Dropdown__DropdownLink-fhxyb7-4 VIDVC"
        href="/projects/project-1"
        onClick={[Function]}
      >
        <div
          className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
        >
          <div
            className="ProjectDropdown__DropdownIcon-nj113c-1 laumky"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div />
        </div>
      </a>
      <a
        aria-current={null}
        className="Dropdown__DropdownLink-fhxyb7-4 VIDVC"
        href="/projects/project-2"
        onClick={[Function]}
      >
        <div
          className="ProjectDropdown__ProjectNameContainer-nj113c-4 dhjNtT"
        >
          <div
            className="ProjectDropdown__DropdownIcon-nj113c-1 laumky"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div />
        </div>
      </a>
    </div>
    <div
      className="Dropdown__DropdownSeparator-fhxyb7-6 lhmoku"
    />
    <div
      className="ProjectDropdown__ActionContainer-nj113c-0 iliCiP"
    >
      <button
        className="sc-ezzayL sc-jJMGHv AddButton__Action-sc-16tykoq-1 cRSqLN qAimf gETdIg"
        onClick={[Function]}
        size="default"
        type="button"
      >
        <svg
          className="AddButton__RegularAddIcon-sc-16tykoq-0"
          height={40}
          viewBox="0 0 32 34"
          width={40}
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
              fill="#FFBD26"
            />
            <path
              d="M16.005 8.957a.75.75 0 01.75.75l-.001 6h6.001a.75.75 0 010 1.5h-6.001l.001 6a.75.75 0 01-1.5 0l-.001-6H9.255a.75.75 0 110-1.5h5.999l.001-6a.75.75 0 01.75-.75z"
              fill="#FFF"
              stroke="#FFF"
            />
          </g>
        </svg>
        <div
          className="AddButton__ActionTitle-sc-16tykoq-2 eGkEGv"
        >
          New Project
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Nav/Projects Dropdown List Without projects 1`] = `
<div
  className="Story-sc-1e4b0ke-0 hwwcpR"
>
  <div>
    <div
      className="ProjectsDropdownList__ProjectContainer-iy7kf9-0 iKAHVI"
    />
    <div
      className="ProjectDropdown__ActionContainer-nj113c-0 iliCiP"
    >
      <button
        className="sc-ezzayL sc-jJMGHv AddButton__Action-sc-16tykoq-1 cRSqLN qAimf gETdIg"
        onClick={[Function]}
        size="default"
        type="button"
      >
        <svg
          className="AddButton__RegularAddIcon-sc-16tykoq-0"
          height={40}
          viewBox="0 0 32 34"
          width={40}
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
              fill="#FFBD26"
            />
            <path
              d="M16.005 8.957a.75.75 0 01.75.75l-.001 6h6.001a.75.75 0 010 1.5h-6.001l.001 6a.75.75 0 01-1.5 0l-.001-6H9.255a.75.75 0 110-1.5h5.999l.001-6a.75.75 0 01.75-.75z"
              fill="#FFF"
              stroke="#FFF"
            />
          </g>
        </svg>
        <div
          className="AddButton__ActionTitle-sc-16tykoq-2 eGkEGv"
        >
          New Project
        </div>
      </button>
    </div>
  </div>
</div>
`;
